Fix login screen on mobile

--- a/src/functional_components/KeyValuePair/KeyValuePair.module.scss
+++ b/src/functional_components/KeyValuePair/KeyValuePair.module.scss
@@ -68,6 +68,7 @@
     margin-bottom: 2px;
     outline: none;
     resize: none;
+    max-width: 100%;
 }
 
 .value + .value {
